# graphrag-rs

./: .gitignore  Cargo.toml  README.md  install.sh
fixtures/: sample.md
src/: config.rs  graph.rs  llm.rs  main.rs
src/ingest/: chunker.rs  extractor.rs  mod.rs  reader.rs
src/mcp/: mod.rs  tools.rs  types.rs
