[package]
name = "graphrag-rs"
version = "0.1.0"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "GraphRAG: LLM-powered knowledge graph builder with MCP server, backed by Samyama"
license = "Apache-2.0"

[[bin]]
name = "graphrag-rs"
path = "src/main.rs"

[dependencies]
samyama-sdk = { path = "../samyama-graph/crates/samyama-sdk", version = "0.6.1" }
samyama = { path = "../samyama-graph", version = "0.6.1" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
